grammar/jank/jank_parser.cpp
// Date Generated : 05-22-2025 19:42:58
#include <vector>
#include <string>
#include <cassert>
#include <iostream>
#include <stack>
#include <fstream>
#include <sstream>
#include <stdexcept>

namespace parser {
    // -- PARSE CONTROLLER --
    //the grammar to be parsed
    std::string s;

    //where we are in the string
    int ptr;

    //this is so we know where to backtrack to
    std::stack<int> ptr_stack;

    //use before trying an optional grammar rule
    void push_stack() {
        ptr_stack.push(ptr);
    }

    //use when grammar rule fails to parse
    void pop_stack() {
        assert(ptr_stack.size() != 0);
        ptr = ptr_stack.top();
        ptr_stack.pop();
    }

    //use when grammar rule parses successfully. 
    void rm_stack() {
        assert(ptr_stack.size() != 0);
        ptr_stack.pop();
    }

    //the stack should be unaffected by any parse function. 

    char next_char() {
        if(ptr >= s.size()) return '\0';
        return s[ptr ++];
    }

    std::string next_chars(int n) {
        assert(n > 0);
        if(ptr + n > s.size()) return "";
        std::string ans = s.substr(ptr, n);
        ptr += n;
        return ans;
    }
    
    struct function_definition;
    struct function;
    struct function_call;
    struct literal_sizeof;
    struct literal_integer;
    struct literal_float;
    struct literal;
    struct expr_primary;
    struct expr_postfix;
    struct expr_unary;
    struct expr_multiplicative;
    struct expr_additive;
    struct expr_shift;
    struct expr_relational;
    struct expr_equality;
    struct expr_bit_and;
    struct expr_bit_xor;
    struct expr_bit_or;
    struct expr_logical_and;
    struct expression;
    struct alpha;
    struct digit;
    struct escape;
    struct line_comment;
    struct multiline_comment;
    struct ws;
    struct rws;
    struct ows;
    struct type;
    struct pointer_type;
    struct base_type;
    struct identifier;
    struct declaration;
    struct assignment;
    struct parameter;
    struct parameter_list;
    struct argument_list;
    struct statement;
    struct simple_statement;
    struct control_statement;
    struct compound_statement;
    struct program;

    // function_definition = type , rws , identifier , ows , "(" , ows , parameter_list , ows , ")" ;
    struct function_definition {
        type *t0;
        rws *t1;
        identifier *t2;
        ows *t3;
        std::string t4;
        ows *t5;
        parameter_list *t6;
        ows *t7;
        std::string t8;
        function_definition(type *_t0, rws *_t1, identifier *_t2, ows *_t3, std::string _t4, ows *_t5, parameter_list *_t6, ows *_t7, std::string _t8) {
            t0 = _t0;
            t1 = _t1;
            t2 = _t2;
            t3 = _t3;
            t4 = _t4;
            t5 = _t5;
            t6 = _t6;
            t7 = _t7;
            t8 = _t8;
        }
        static function_definition* parse();
        std::string to_string();
    };

    // function = function_definition , ows , compound_statement ;
    struct function {
        function_definition *t0;
        ows *t1;
        compound_statement *t2;
        function(function_definition *_t0, ows *_t1, compound_statement *_t2) {
            t0 = _t0;
            t1 = _t1;
            t2 = _t2;
        }
        static function* parse();
        std::string to_string();
    };

    // function_call = identifier , ows , "(" , ows , argument_list , ows , ")" ;
    struct function_call {
        identifier *t0;
        ows *t1;
        std::string t2;
        ows *t3;
        argument_list *t4;
        ows *t5;
        std::string t6;
        function_call(identifier *_t0, ows *_t1, std::string _t2, ows *_t3, argument_list *_t4, ows *_t5, std::string _t6) {
            t0 = _t0;
            t1 = _t1;
            t2 = _t2;
            t3 = _t3;
            t4 = _t4;
            t5 = _t5;
            t6 = _t6;
        }
        static function_call* parse();
        std::string to_string();
    };

    // literal_sizeof = "sizeof" , ows , "(" , type , ")" ;
    struct literal_sizeof {
        std::string t0;
        ows *t1;
        std::string t2;
        type *t3;
        std::string t4;
        literal_sizeof(std::string _t0, ows *_t1, std::string _t2, type *_t3, std::string _t4) {
            t0 = _t0;
            t1 = _t1;
            t2 = _t2;
            t3 = _t3;
            t4 = _t4;
        }
        static literal_sizeof* parse();
        std::string to_string();
    };

    // literal_integer = < digit > ;
    struct literal_integer {
        struct a0 {
            digit *t0;
            a0(digit *_t0) {
                t0 = _t0;
            }
            static a0* parse();
            std::string to_string();
        };
        std::vector<a0*> t0;
        literal_integer(std::vector<a0*> _t0) {
            t0 = _t0;
        }
        static literal_integer* parse();
        std::string to_string();
    };

    // literal_float = < digit > , "." , < digit > ;
    struct literal_float {
        struct a0 {
            digit *t0;
            a0(digit *_t0) {
                t0 = _t0;
            }
            static a0* parse();
            std::string to_string();
        };
        struct a1 {
            digit *t0;
            a1(digit *_t0) {
                t0 = _t0;
            }
            static a1* parse();
            std::string to_string();
        };
        std::vector<a0*> t0;
        std::string t1;
        std::vector<a1*> t2;
        literal_float(std::vector<a0*> _t0, std::string _t1, std::vector<a1*> _t2) {
            t0 = _t0;
            t1 = _t1;
            t2 = _t2;
        }
        static literal_float* parse();
        std::string to_string();
    };

    // literal = literal_integer | literal_sizeof ;
    struct literal {
        struct a0 {
            literal_integer *t0;
            a0(literal_integer *_t0) {
                t0 = _t0;
            }
            static a0* parse();
            std::string to_string();
        };
        struct a1 {
            literal_sizeof *t0;
            a1(literal_sizeof *_t0) {
                t0 = _t0;
            }
            static a1* parse();
            std::string to_string();
        };
        bool is_a0 = false;
        a0 *t0;
        bool is_a1 = false;
        a1 *t1;
        literal(a0 *_t0) {
            is_a0 = true;
            t0 = _t0;
        }
        literal(a1 *_t1) {
            is_a1 = true;
            t1 = _t1;
        }
        static literal* parse();
        std::string to_string();
    };

    // expr_primary = function_call | identifier | literal | "(" , ows , expression , ows , ")" ;
    struct expr_primary {
        struct a0 {
            function_call *t0;
            a0(function_call *_t0) {
                t0 = _t0;
            }
            static a0* parse();
            std::string to_string();
        };
        struct a1 {
            identifier *t0;
            a1(identifier *_t0) {
                t0 = _t0;
            }
            static a1* parse();
            std::string to_string();
        };
        struct a2 {
            literal *t0;
            a2(literal *_t0) {
                t0 = _t0;
            }
            static a2* parse();
            std::string to_string();
        };
        struct a3 {
            std::string t0;
            ows *t1;
            expression *t2;
            ows *t3;
            std::string t4;
            a3(std::string _t0, ows *_t1, expression *_t2, ows *_t3, std::string _t4) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
                t4 = _t4;
            }
            static a3* parse();
            std::string to_string();
        };
        bool is_a0 = false;
        a0 *t0;
        bool is_a1 = false;
        a1 *t1;
        bool is_a2 = false;
        a2 *t2;
        bool is_a3 = false;
        a3 *t3;
        expr_primary(a0 *_t0) {
            is_a0 = true;
            t0 = _t0;
        }
        expr_primary(a1 *_t1) {
            is_a1 = true;
            t1 = _t1;
        }
        expr_primary(a2 *_t2) {
            is_a2 = true;
            t2 = _t2;
        }
        expr_primary(a3 *_t3) {
            is_a3 = true;
            t3 = _t3;
        }
        static expr_primary* parse();
        std::string to_string();
    };

    // expr_postfix = expr_primary , { ows , "[" , ows , expression , ows , "]" } ;
    struct expr_postfix {
        struct a0 {
            ows *t0;
            std::string t1;
            ows *t2;
            expression *t3;
            ows *t4;
            std::string t5;
            a0(ows *_t0, std::string _t1, ows *_t2, expression *_t3, ows *_t4, std::string _t5) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
                t4 = _t4;
                t5 = _t5;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_primary *t0;
        std::vector<a0*> t1;
        expr_postfix(expr_primary *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_postfix* parse();
        std::string to_string();
    };

    // expr_unary = ( "+" | "-" | "~" | "!" ) , ows , expr_unary | expr_postfix ;
    struct expr_unary {
        struct a0 {
            struct b0 {
                struct c0 {
                    std::string t0;
                    c0(std::string _t0) {
                        t0 = _t0;
                    }
                    static c0* parse();
                    std::string to_string();
                };
                struct c1 {
                    std::string t0;
                    c1(std::string _t0) {
                        t0 = _t0;
                    }
                    static c1* parse();
                    std::string to_string();
                };
                struct c2 {
                    std::string t0;
                    c2(std::string _t0) {
                        t0 = _t0;
                    }
                    static c2* parse();
                    std::string to_string();
                };
                struct c3 {
                    std::string t0;
                    c3(std::string _t0) {
                        t0 = _t0;
                    }
                    static c3* parse();
                    std::string to_string();
                };
                bool is_c0 = false;
                c0 *t0;
                bool is_c1 = false;
                c1 *t1;
                bool is_c2 = false;
                c2 *t2;
                bool is_c3 = false;
                c3 *t3;
                b0(c0 *_t0) {
                    is_c0 = true;
                    t0 = _t0;
                }
                b0(c1 *_t1) {
                    is_c1 = true;
                    t1 = _t1;
                }
                b0(c2 *_t2) {
                    is_c2 = true;
                    t2 = _t2;
                }
                b0(c3 *_t3) {
                    is_c3 = true;
                    t3 = _t3;
                }
                static b0* parse();
                std::string to_string();
            };
            b0 *t0;
            ows *t1;
            expr_unary *t2;
            a0(b0 *_t0, ows *_t1, expr_unary *_t2) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
            }
            static a0* parse();
            std::string to_string();
        };
        struct a1 {
            expr_postfix *t0;
            a1(expr_postfix *_t0) {
                t0 = _t0;
            }
            static a1* parse();
            std::string to_string();
        };
        bool is_a0 = false;
        a0 *t0;
        bool is_a1 = false;
        a1 *t1;
        expr_unary(a0 *_t0) {
            is_a0 = true;
            t0 = _t0;
        }
        expr_unary(a1 *_t1) {
            is_a1 = true;
            t1 = _t1;
        }
        static expr_unary* parse();
        std::string to_string();
    };

    // expr_multiplicative = expr_unary , { ows , ( "*" | "/" | "%" ) , ows , expr_unary } ;
    struct expr_multiplicative {
        struct a0 {
            struct b0 {
                struct c0 {
                    std::string t0;
                    c0(std::string _t0) {
                        t0 = _t0;
                    }
                    static c0* parse();
                    std::string to_string();
                };
                struct c1 {
                    std::string t0;
                    c1(std::string _t0) {
                        t0 = _t0;
                    }
                    static c1* parse();
                    std::string to_string();
                };
                struct c2 {
                    std::string t0;
                    c2(std::string _t0) {
                        t0 = _t0;
                    }
                    static c2* parse();
                    std::string to_string();
                };
                bool is_c0 = false;
                c0 *t0;
                bool is_c1 = false;
                c1 *t1;
                bool is_c2 = false;
                c2 *t2;
                b0(c0 *_t0) {
                    is_c0 = true;
                    t0 = _t0;
                }
                b0(c1 *_t1) {
                    is_c1 = true;
                    t1 = _t1;
                }
                b0(c2 *_t2) {
                    is_c2 = true;
                    t2 = _t2;
                }
                static b0* parse();
                std::string to_string();
            };
            ows *t0;
            b0 *t1;
            ows *t2;
            expr_unary *t3;
            a0(ows *_t0, b0 *_t1, ows *_t2, expr_unary *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_unary *t0;
        std::vector<a0*> t1;
        expr_multiplicative(expr_unary *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_multiplicative* parse();
        std::string to_string();
    };

    // expr_additive = expr_multiplicative , { ows , ( "+" | "-" ) , ows , expr_multiplicative } ;
    struct expr_additive {
        struct a0 {
            struct b0 {
                struct c0 {
                    std::string t0;
                    c0(std::string _t0) {
                        t0 = _t0;
                    }
                    static c0* parse();
                    std::string to_string();
                };
                struct c1 {
                    std::string t0;
                    c1(std::string _t0) {
                        t0 = _t0;
                    }
                    static c1* parse();
                    std::string to_string();
                };
                bool is_c0 = false;
                c0 *t0;
                bool is_c1 = false;
                c1 *t1;
                b0(c0 *_t0) {
                    is_c0 = true;
                    t0 = _t0;
                }
                b0(c1 *_t1) {
                    is_c1 = true;
                    t1 = _t1;
                }
                static b0* parse();
                std::string to_string();
            };
            ows *t0;
            b0 *t1;
            ows *t2;
            expr_multiplicative *t3;
            a0(ows *_t0, b0 *_t1, ows *_t2, expr_multiplicative *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_multiplicative *t0;
        std::vector<a0*> t1;
        expr_additive(expr_multiplicative *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_additive* parse();
        std::string to_string();
    };

    // expr_shift = expr_additive , { ows , ( "<<" | ">>" ) , ows , expr_additive } ;
    struct expr_shift {
        struct a0 {
            struct b0 {
                struct c0 {
                    std::string t0;
                    c0(std::string _t0) {
                        t0 = _t0;
                    }
                    static c0* parse();
                    std::string to_string();
                };
                struct c1 {
                    std::string t0;
                    c1(std::string _t0) {
                        t0 = _t0;
                    }
                    static c1* parse();
                    std::string to_string();
                };
                bool is_c0 = false;
                c0 *t0;
                bool is_c1 = false;
                c1 *t1;
                b0(c0 *_t0) {
                    is_c0 = true;
                    t0 = _t0;
                }
                b0(c1 *_t1) {
                    is_c1 = true;
                    t1 = _t1;
                }
                static b0* parse();
                std::string to_string();
            };
            ows *t0;
            b0 *t1;
            ows *t2;
            expr_additive *t3;
            a0(ows *_t0, b0 *_t1, ows *_t2, expr_additive *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_additive *t0;
        std::vector<a0*> t1;
        expr_shift(expr_additive *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_shift* parse();
        std::string to_string();
    };

    // expr_relational = expr_shift , { ows , ( "<=" | "<" | ">=" | ">" ) , ows , expr_shift } ;
    struct expr_relational {
        struct a0 {
            struct b0 {
                struct c0 {
                    std::string t0;
                    c0(std::string _t0) {
                        t0 = _t0;
                    }
                    static c0* parse();
                    std::string to_string();
                };
                struct c1 {
                    std::string t0;
                    c1(std::string _t0) {
                        t0 = _t0;
                    }
                    static c1* parse();
                    std::string to_string();
                };
                struct c2 {
                    std::string t0;
                    c2(std::string _t0) {
                        t0 = _t0;
                    }
                    static c2* parse();
                    std::string to_string();
                };
                struct c3 {
                    std::string t0;
                    c3(std::string _t0) {
                        t0 = _t0;
                    }
                    static c3* parse();
                    std::string to_string();
                };
                bool is_c0 = false;
                c0 *t0;
                bool is_c1 = false;
                c1 *t1;
                bool is_c2 = false;
                c2 *t2;
                bool is_c3 = false;
                c3 *t3;
                b0(c0 *_t0) {
                    is_c0 = true;
                    t0 = _t0;
                }
                b0(c1 *_t1) {
                    is_c1 = true;
                    t1 = _t1;
                }
                b0(c2 *_t2) {
                    is_c2 = true;
                    t2 = _t2;
                }
                b0(c3 *_t3) {
                    is_c3 = true;
                    t3 = _t3;
                }
                static b0* parse();
                std::string to_string();
            };
            ows *t0;
            b0 *t1;
            ows *t2;
            expr_shift *t3;
            a0(ows *_t0, b0 *_t1, ows *_t2, expr_shift *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_shift *t0;
        std::vector<a0*> t1;
        expr_relational(expr_shift *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_relational* parse();
        std::string to_string();
    };

    // expr_equality = expr_relational , { ows , ( "==" | "!=" ) , ows , expr_relational } ;
    struct expr_equality {
        struct a0 {
            struct b0 {
                struct c0 {
                    std::string t0;
                    c0(std::string _t0) {
                        t0 = _t0;
                    }
                    static c0* parse();
                    std::string to_string();
                };
                struct c1 {
                    std::string t0;
                    c1(std::string _t0) {
                        t0 = _t0;
                    }
                    static c1* parse();
                    std::string to_string();
                };
                bool is_c0 = false;
                c0 *t0;
                bool is_c1 = false;
                c1 *t1;
                b0(c0 *_t0) {
                    is_c0 = true;
                    t0 = _t0;
                }
                b0(c1 *_t1) {
                    is_c1 = true;
                    t1 = _t1;
                }
                static b0* parse();
                std::string to_string();
            };
            ows *t0;
            b0 *t1;
            ows *t2;
            expr_relational *t3;
            a0(ows *_t0, b0 *_t1, ows *_t2, expr_relational *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_relational *t0;
        std::vector<a0*> t1;
        expr_equality(expr_relational *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_equality* parse();
        std::string to_string();
    };

    // expr_bit_and = expr_equality , { ows , "&" , ows , expr_equality } ;
    struct expr_bit_and {
        struct a0 {
            ows *t0;
            std::string t1;
            ows *t2;
            expr_equality *t3;
            a0(ows *_t0, std::string _t1, ows *_t2, expr_equality *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_equality *t0;
        std::vector<a0*> t1;
        expr_bit_and(expr_equality *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_bit_and* parse();
        std::string to_string();
    };

    // expr_bit_xor = expr_bit_and , { ows , "^" , ows , expr_bit_and } ;
    struct expr_bit_xor {
        struct a0 {
            ows *t0;
            std::string t1;
            ows *t2;
            expr_bit_and *t3;
            a0(ows *_t0, std::string _t1, ows *_t2, expr_bit_and *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_bit_and *t0;
        std::vector<a0*> t1;
        expr_bit_xor(expr_bit_and *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_bit_xor* parse();
        std::string to_string();
    };

    // expr_bit_or = expr_bit_xor , { ows , "|" , ows , expr_bit_xor } ;
    struct expr_bit_or {
        struct a0 {
            ows *t0;
            std::string t1;
            ows *t2;
            expr_bit_xor *t3;
            a0(ows *_t0, std::string _t1, ows *_t2, expr_bit_xor *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_bit_xor *t0;
        std::vector<a0*> t1;
        expr_bit_or(expr_bit_xor *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_bit_or* parse();
        std::string to_string();
    };

    // expr_logical_and = expr_bit_or , { ows , "&&" , ows , expr_bit_or } ;
    struct expr_logical_and {
        struct a0 {
            ows *t0;
            std::string t1;
            ows *t2;
            expr_bit_or *t3;
            a0(ows *_t0, std::string _t1, ows *_t2, expr_bit_or *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_bit_or *t0;
        std::vector<a0*> t1;
        expr_logical_and(expr_bit_or *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expr_logical_and* parse();
        std::string to_string();
    };

    // expression = expr_logical_and , { ows , "||" , ows , expr_logical_and } ;
    struct expression {
        struct a0 {
            ows *t0;
            std::string t1;
            ows *t2;
            expr_logical_and *t3;
            a0(ows *_t0, std::string _t1, ows *_t2, expr_logical_and *_t3) {
                t0 = _t0;
                t1 = _t1;
                t2 = _t2;
                t3 = _t3;
            }
            static a0* parse();
            std::string to_string();
        };
        expr_logical_and *t0;
        std::vector<a0*> t1;
        expression(expr_logical_and *_t0, std::vector<a0*> _t1) {
            t0 = _t0;
            t1 = _t1;
        }
        static expression* parse();
        std::string to_string();
    };

    // alpha = "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" ;
    struct alpha {
        struct a0 {
            std::string t0;
            a0(std::string _t0) {
                t0 = _t0;
            }
            static a0* parse();
            std::string to_string();
        };
        struct a1 {
            std::string t0;
            a1(std::string _t0) {
                t0 = _t0;
            }
            static a1* parse();
            std::string to_string();
        };
        struct a2 {
            std::string t0;
            a2(std::string _t0) {
                t0 = _t0;
            }
            static a2* parse();
            std::string to_string();
        };
        struct a3 {
            std::string t0;
            a3(std::string _t0) {
                t0 = _t0;
            }
            static a3* parse();
            std::string to_string();
        };
        struct a4 {
            std::string t0;
            a4(std::string _t0) {
                t0 = _t0;
            }
            static a4* parse();
            std::string to_string();
        };
        struct a5 {
            std::string t0;
            a5(std::string _t0) {
                t0 = _t0;
            }
            static a5* parse();
            std::string to_string();
        };
        struct a6 {
            std::string t0;
            a6(std::string _t0) {
                t0 = _t0;
            }
            static a6* parse();
            std::string to_string();
        };
        struct a7 {
            std::string t0;
            a7(std::string _t0) {
                t0 = _t0;
            }
            static a7* parse();
            std::string to_string();
        };
        struct a8 {
            std::string t0;
            a8(std::string _t0) {
                t0 = _t0;
            }
            static a8* parse();
            std::string to_string();
        };
        struct a9 {
            std::string t0;
            a9(std::string _t0) {
                t0 = _t0;
            }
            static a9* parse();
            std::string to_string();
        };
        struct a10 {
            std::string t0;
            a10(std::string _t0) {
                t0 = _t0;
            }
            static a10* parse();
            std::string to_string();
        };
        struct a11 {
            std::string t0;
            a11(std::string _t0) {
                t0 = _t0;
            }
            static a11* parse();
            std::string to_string();
        };
        struct a12 {
            std::string t0;
            a12(std::string _t0) {
                t0 = _t0;
            }
            static a12* parse();
            std::string to_string();
        };
        struct a13 {
            std::string t0;
            a13(std::string _t0) {
                t0 = _t0;
            }
            static a13* parse();
            std::string to_string();
        };
        struct a14 {
            std::string t0;
            a14(std::string _t0) {
                t0 = _t0;
            }
            static a14* parse();
            std::string to_string();
        };
        struct a15 {
            std::string t0;
            a15(std::string _t0) {
                t0 = _t0;
            }
            static a15* parse();
            std::string to_string();
        };
        struct a16 {
            std::string t0;
            a16(std::string _t0) {
                t0 = _t0;
            }
            static a16* parse();
            std::string to_string();
        };
        struct a17 {
            std::string t0;
            a17(std::string _t0) {
                t0 = _t0;
            }
            static a17* parse();
            std::string to_string();
        };
        struct a18 {
            std::string t0;
            a18(std::string _t0) {
                t0 = _t0;
            }
            static a18* parse();
            std::string to_string();
        };
        struct a19 {
            std::string t0;
            a19(std::string _t0) {
                t0 = _t0;
            }
            static a19* parse();
            std::string to_string();
        };
        struct a20 {
            std::string t0;
            a20(std::string _t0) {
                t0 = _t0;
            }
            static a20* parse();
            std::string to_string();
        };
        struct a21 {
            std::string t0;
            a21(std::string _t0) {
                t0 = _t0;
            }
            static a21* parse();
            std::string to_string();
        };
        struct a22 {
            std::string t0;
            a22(std::string _t0) {
                t0 = _t0;
            }
            static a22* parse();
            std::string to_string();
        };
        struct a23 {
            std::string t0;
            a23(std::string _t0) {
                t0 = _t0;
            }
            static a23* parse();
            std::string to_string();
        };
        struct a24 {
            std::string t0;
            a24(std::string _t0) {
                t0 = _t0;
            }
            static a24* parse();
            std::string to_string();
        };
        struct a25 {
            std::string t0;
            a25(std::string _t0) {
                t0 = _t0;
            }
            static a25* parse();
            std::string to_string();
        };
        struct a26 {
            std::string t0;
            a26(std::string _t0) {
                t0 = _t0;
            }
            static a26* parse();
            std::string to_string();
        };
        struct a27 {
            std::string t0;
            a27(std::string _t0) {
                t0 = _t0;
            }
            static a27* parse();
            std::string to_string();
        };
        struct a28 {
            std::string t0;
            a28(std::string _t0) {
                t0 = _t0;
            }
            static a28* parse();
            std::string to_string();
        };
        struct a29 {
            std::string t0;
            a29(std::string _t0) {
                t0 = _t0;
            }
            static a29* parse();
            std::string to_string();
        };
        struct a30 {
            std::string t0;
            a30(std::string _t0) {
                t0 = _t0;
            }
            static a30* parse();
            std::string to_string();
        };
        struct a31 {
            std::string t0;
            a31(std::string _t0) {
                t0 = _t0;
            }
            static a31* parse();
            std::string to_string();
        };
        struct a32 {
            std::string t0;
            a32(std::string _t0) {
                t0 = _t0;
            }
            static a32* parse();
            std::string to_string();
        };
        struct a33 {
            std::string t0;
            a33(std::string _t0) {
                t0 = _t0;
            }
            static a33* parse();
            std::string to_string();
        };
        struct a34 {
            std::string t0;
            a34(std::string _t0) {
                t0 = _t0;
            }
            static a34* parse();
            std::string to_string();
        };
        struct a35 {
            std::string t0;
            a35(std::string _t0) {
                t0 = _t0;
            }
            static a35* parse();
            std::string to_string();
        };
        struct a36 {
            std::string t0;
            a36(std::string _t0) {
                t0 = _t0;
            }
            static a36* parse();
            std::string to_string();
        };
        struct a37 {
            std::string t0;
            a37(std::string _t0) {
                t0 = _t0;
            }
            static a37* parse();
            std::string to_string();
        };
        struct a38 {
            std::string t0;
            a38(std::string _t0) {
                t0 = _t0;
            }
            static a38* parse();
            std::string to_string();
        };
        struct a39 {
            std::string t0;
            a39(std::string _t0) {
                t0 = _t0;
            }
            static a39* parse();
            std::string to_string();
        };
        struct a40 {
            std::string t0;
            a40(std::string _t0) {
                t0 = _t0;
            }
            static a40* parse();
            std::string to_string();
        };
        struct a41 {
            std::string t0;
            a41(std::string _t0) {
